In container-row don't use q-col-gutter, cases overlap issues; add float-box and float-plain styles from older custom styles to fix layout for the few things that use those

--- a/screen/qstatic/WebrootVue.qvt.css
+++ b/screen/qstatic/WebrootVue.qvt.css
@@ -127,6 +127,17 @@ dd { margin-left:0; }
 .dl-horizontal dd:before, .dl-horizontal dd:after { display:table; content:" "; }
 .dl-horizontal dd:after { clear:both; }
 
+/* ====== Old Handy Styles ====== */
+
+ul.float-box { display: inline-block; list-style: none outside none; margin: 0 0 -8px 0; padding: 0; }
+ul.float-box li { display: inline-block; line-height: 18px; margin: 0 8px 8px 0; padding: 8px; float: left; }
+ul.float-box li.box-narrow { max-width: 300px; }
+
+ul.float-plain { display: inline-block; list-style: none outside none; margin: 0 0 -8px 0; padding: 0; }
+ul.float-plain li { display: inline-block; line-height: 18px; margin: 0 8px 8px 0; padding: 8px; float: left; }
+ul.float-plain.condensed { margin: 0; }
+ul.float-plain.condensed li { margin: 0 4px 0 0; padding: 4px; }
+
 /* ====== print style overrides ====== */
 
 @media print {
